Finished Advertisement Endpoint
