# app/Models/Advertisement.php
@@ -8,4 +8,11 @@ use Illuminate\Database\Eloquent\Model;
 class Advertisement extends Model
 {
     use HasFactory;
+
+    protected $fillable = [
+        'title',
+        'description',
+        'order',
+        'image'
+    ];
 }
